# panCollapse

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  PROGRESS.md  README.md  TASKS.md
.agent-workspace/: GATES.md  KICKOFF.md  MANIFEST.md  MODEL_POLICY.md  ORCHESTRATION.md  README.md  USER_DECISIONS.md
.claude/: workflow.md
.claude/agents/: annotation-semantics-reviewer.md  build-integration-researcher.md  fixture-contract-reviewer.md  gamp-ordering-researcher.md  implementation-reviewer.md  oracle.md  performance-reviewer.md  rad-format-researcher.md  vg-integration-researcher.md
.claude/commands/: evaluate-gate.md  plan-next-increment.md  session-start.md
.claude/rules/: languages.md  project.md  provenance.md  scope.md
.githooks/: commit-msg  pre-commit
cmake/: PanCollapseVg.cmake
docs/: architecture-proposal.md  bam-export.md  compatibility-semantics.md  conversion-algorithm-tests.md  conversion-algorithm.md  decisions.md  genefull.md  glossary.md  input-output-contract.md  product-spec.md  roadmap.md  test-fixture-sources.md  testing_fixture_creation.md  v0.1-review-findings.md  validation-contract.md
docs/phase1/: README.md  build-test-plan.md  cli-run-contract.md  compatibility-fixtures.md  input-diagnostics-fixtures.md  policy-fixtures.md  rad-interop-fixture.md
docs/phase2/: implementation-plan.md
docs/research/: annotation-lookup-performance.md  gamp-grouping-and-sorting.md  rad-format.md  vg-integration.md
scripts/: build-docker-image.sh  install-git-hooks.sh  make-gene-annotation.sh  make-gene-loci.sh  provenance-guard.sh  remove-agent-workspace.sh  verify-workspace.sh
src/: CMakeLists.txt  main.cpp  pathtally.hpp  pathtally_ledger.hpp  pathtally_qualadj.hpp  pathtally_score.hpp
tests/: CMakeLists.txt
tests/policy/: CMakeLists.txt  target_set_policy_smoke.cpp
tests/vg/: CMakeLists.txt  bam_count_verify.py  bare_t2g_regression.sh  build_fidelity_gamp.sh  fixture_tag_reads.py  gamp_projection_fixture_writer.cpp  gamp_xg_gtf_projection_smoke.cpp  pathtally_af_verify.py  pathtally_bam_verify.py  pathtally_ledger_test.cpp  pathtally_oracle.py  pathtally_pipeline_test.cpp  pathtally_score_test.cpp  phase2_expect_strand_tbi.sh  phase2_fixture_writer.cpp  phase2_quant_verify.py  phase3_expect_assignment_failure.sh  phase3_expect_cli_numeric_failure.sh  phase3_expect_group_recurrence_failure.sh  phase3_expect_manifest_failure.sh  phase3_expect_molecule_identity_failure.sh  phase3_expect_traversal_cap_failure.sh  phase3_grouping_verify.py  phase3_medium_fixture_generate.py  phase3_medium_fixture_verify.py  phase3_mixed_orientation_verify.py  vg_link_smoke.cpp
tests/vg/fixtures/genefull_isoform_smoke/: annotation.gtf  graph.gfa  reads.gamp.json  t2g.tsv
tests/vg/fixtures/genefull_smoke/: annotation.gtf  gene_loci.tsv  graph.gfa  reads.gamp.json  reads_antisense.gamp.json  t2g.tsv
tests/vg/fixtures/multigene_bam_smoke/: annotation.gtf  graph.gfa  reads.gamp.json  t2g.tsv
tests/vg/fixtures/pathtally_smoke/: graph.gfa  position_independence.sam  reads.gamp.json  reads_af.gamp.json  reads_badmol.gamp.json  reads_badnode.gamp.json  reads_recur.gamp.json  t2g.tsv
tests/vg/fixtures/splice_concordance_smoke/: annotation.gtf  graph.gfa  reads.gamp.json  t2g.tsv
